Set max-width of banner image to prevent image distortion

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -574,6 +574,7 @@ html {
   display: block;
   position: relative;
   height: $banner-height;
+  max-width: 1390px;
   background-color: $banner-background;
   transition: height 0.2s;
 
